<package>
  <name>rot</name>
  <version>1.0.0</version>
  <description>RoT ROS Development Robot.</description>
  <maintainer email="shaun@priceconsulting.biz">Shaun Price</maintainer>
  <license>BSD</license>
  <url type="website">http://www.priceconsulting.biz</url>
  <url type="repository">https://github.com/ShaunPrice/RobotOfThings</url>
  <url type="bugtracker">https://github.com/ShaunPrice/RobotOfThings</url>
  
  <author email="shaun@priceconsulting.biz">Shaun Price</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>audio_common_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>lex_common_msgs</build_depend>
  <build_depend>voice_interaction_robot_msgs</build_depend>
  <build_depend>python-pyaudio</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>audio_common_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>lex_common_msgs</run_depend>
  <run_depend>voice_interaction_robot_msgs</run_depend>
  <run_depend>python-pyaudio</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
